client and server connected
